// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > getVisibilityIcon > should return icon and tooltip when mode is hidden 1`] = `
{
  "bubbleClassNames": "gd-filter-button-custom-icon-bubble s-gd-filter-button-custom-icon-bubble",
  "icon": "gd-icon-invisible s-gd-icon-invisible",
  "tooltip": {
    "id": "filter.visibilityMode.tooltip.hidden",
  },
}
`;

exports[`utils > getVisibilityIcon > should return icon and tooltip when mode is readonly in edit mode 1`] = `
{
  "bubbleClassNames": "gd-filter-button-custom-icon-bubble s-gd-filter-button-custom-icon-bubble",
  "icon": "gd-icon-lock s-gd-icon-lock",
  "tooltip": {
    "id": "filter.visibilityMode.tooltip.readonly.editMode",
  },
}
`;

exports[`utils > getVisibilityIcon > should return icon and tooltip when mode is readonly in view mode 1`] = `
{
  "bubbleClassNames": "gd-filter-button-custom-icon-bubble s-gd-filter-button-custom-icon-bubble",
  "icon": "gd-icon-lock s-gd-icon-lock",
  "tooltip": {
    "id": "filter.visibilityMode.tooltip.readonly.viewMode",
  },
}
`;
